update for conflict

--- a/Aubrey's Portfolio.html
+++ b/Aubrey's Portfolio.html
@@ -7,18 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Aubrey Diehl</title>
     <style>
-        .button {
-        background-color: #1c87c9;
-        border: none;
-        color: white;
-        padding: 20px 34px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 20px;
-        margin: 4px 2px;
-        cursor: pointer;
-      }
     </style>
   </head>
   <body>
@@ -30,9 +18,8 @@
 </p>
 </h2>
 </div>
-</div>
 <div class="border2">
-<h3> 
+<!-- <h3> 
     Overview: Experience
      <div class="links">
         Project Links
@@ -44,8 +31,8 @@
     <br />    
     <button onclick="blank"> project 2</button>
     <br />    
-    <button onclick="blank"> project 3</button>
-    </div>
+   <!-- button onclick="blank"> project 3</button> -->
+    <!-- </div> --> -->
         </p>
     </p>
 </div>
