aubrey's structure updates-Tues

--- a/Aubrey's Portfolio.html
+++ b/Aubrey's Portfolio.html
@@ -10,41 +10,36 @@
     </style>
   </head>
   <body>
-    <div class="border1" >
-<h1> Aubrey Diehl</h1>
-<h2>Full Stack Web Developer
-<p>
-    Some text here about a quick intro about who I am, maybe some languages that I code
-</p>
-</h2>
+    <div class="box1" >
+        <h1> Aubrey Diehl</h1>
+            <img src="IMG_0300.jpg" alt="Joshua Tree" width="500" height="300">
+        <h2>Full Stack Web Developer
+            <p>Some text here about a quick intro about who I am, maybe some languages that I code</p>
 </div>
-<div class="border2">
-<!-- <h3> 
-    Overview: Experience
-     <div class="links">
-        Project Links
-        <p>
-            Here is some text that talks about projects, past job experience or something else
-        </p>
+        </h2>
+<div class="box2">
+<h3> 
+    Overview: Experience + Project Links
+        <p> Here is some text that talks about projects, past job experience or something else</p>
     <br />
-    <button onclick="https://github.com/Aubzzz/portfolio/pull/1"> project 1</button>
+    <button>project 1</button>
     <br />    
-    <button onclick="blank"> project 2</button>
+    <button>project 2</button>
     <br />    
-   <!-- button onclick="blank"> project 3</button> -->
-    <!-- </div> --> -->
-        </p>
-    </p>
+    <button>project 3</button>
 </div>
 </h3>
-<div class="border3">
+<div class="box3">
 <h4>
     Work With Me
     <ol>
-        <li>aubrey.diehl28@gmail.com</li>
-        <li><button>LinkdIn</button></li>
-        <li><button>GitHub</button></li>
-    </h4>
+       <li><a href="mailto:aubrey.diehl28@gmail.com">Click here to send me an email</a></li>
+       <li><a href="https://www.linkedin.com/in/aubrey-diehl/" target="blank">
+            <button>LinkedIn</button> </a></li>
+       <li><a href="https://github.com/Aubzzz" target="blank">
+            <button>GitHub</button></a></li> 
+    </ol>
+</h4>
 </div>
 </body>
 </html>
